--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ itsdangerous==1.1.0
 Flask-SQLAlchemy
 pandas
 rasa
+Werkzeug==2.0.0
+jinja2==3.0.3
+stripe
 Flask-SocketIO==4.3.1
 python-engineio==3.13.2
 python-socketio==4.6.0
