--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,14 @@ flask_wtf==0.14.3
 dnspython==2.0.0
 configparser==5.0.1
 itsdangerous==1.1.0
-Flask-SQLAlchemy
+flask-sqlalchemy==2.5.1
 pandas
-rasa
+rasa==3.2.10
+numpy==1.20.3
 Werkzeug==2.0.0
 jinja2==3.0.3
 stripe
+SQLAlchemy==1.4
 Flask-SocketIO==4.3.1
 python-engineio==3.13.2
 python-socketio==4.6.0
